correcciones de id para estilo none

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
-#iniciar, #mensajeDecodificado, #paginaDecodificar1,
-#vuelvePronto, #mensajeEnviado, #mensajeCodificado,
-#paginaCodificar1, #buttonReturn, #buttonEnviar {
+#paginaCodificar, #mensajeCodificado,  #mensajeEnviado, #paginaDecodificar, #mensajeDecodificado,
+#vuelvePronto, #buttonEnviar, #iniciar, #buttonReturn {
   display: none
 }
 
